<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_card_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_linear_layout_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivProfilePhoto"
                        android:layout_width="@dimen/user_image_size_phone"
                        android:layout_height="@dimen/user_image_size_phone"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/default_text_view_margin"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/metProfileFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:baseColor="@color/primary"
                            app:primaryColor="@color/primary_dark"
                            app:floatingLabel="highlight"
                            android:hint="@string/profile_activity_first_name_hint"
                            android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                            android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                            android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                            android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                            app:maxCharacters="30"
                            app:singleLineEllipsis="true"/>

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/metProfileLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:baseColor="@color/primary"
                            app:primaryColor="@color/primary_dark"
                            app:floatingLabel="highlight"
                            android:hint="@string/profile_activity_last_name_hint"
                            android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                            android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                            android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                            android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                            app:maxCharacters="30"
                            app:singleLineEllipsis="true"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/metProfileAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:baseColor="@color/primary"
                        app:primaryColor="@color/primary_dark"
                        app:floatingLabel="highlight"
                        android:maxLines="3"
                        android:hint="@string/profile_activity_about_hint"
                        android:ellipsize="end"
                        android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                        android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                        android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                        android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"/>

                    <Spinner
                        android:id="@+id/spProfileGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_spinner_margin"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_card_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_linear_layout_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metProfileUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:baseColor="@color/primary"
                    app:primaryColor="@color/primary_dark"
                    app:floatingLabel="highlight"
                    android:hint="@string/profile_activity_new_username_hint"
                    android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                    android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                    app:maxCharacters="20"
                    app:minCharacters="5"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metProfileNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:baseColor="@color/primary"
                    app:primaryColor="@color/primary_dark"
                    app:floatingLabel="highlight"
                    android:hint="@string/profile_activity_new_password_hint"
                    android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                    android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                    app:maxCharacters="20"
                    app:minCharacters="3"
                    android:inputType="textPassword"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metProfileConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:baseColor="@color/primary"
                    app:primaryColor="@color/primary_dark"
                    app:floatingLabel="highlight"
                    android:hint="@string/profile_activity_confirm_new_password_hint"
                    android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                    android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                    app:maxCharacters="20"
                    app:minCharacters="3"
                    android:inputType="textPassword"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_card_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_linear_layout_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:baseColor="@color/primary"
                    app:primaryColor="@color/primary_dark"
                    app:floatingLabel="highlight"
                    android:hint="@string/profile_activity_email_hint"
                    android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                    android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                    android:inputType="textEmailAddress"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/metProfilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:baseColor="@color/primary"
                    app:primaryColor="@color/primary_dark"
                    app:floatingLabel="highlight"
                    android:hint="@string/profile_activity_phone_hint"
                    android:layout_marginLeft="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginRight="@dimen/default_edit_text_margin_left_right"
                    android:layout_marginTop="@dimen/default_edit_text_margin_top_bottom"
                    android:layout_marginBottom="@dimen/default_edit_text_margin_top_bottom"
                    android:inputType="phone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btProfileSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Default.Button"
            android:layout_margin="@dimen/default_button_margin"
            android:text="@string/profile_activity_button_text"/>
    </LinearLayout>
</ScrollView>